[package]
name = "rust_event_listener"
version = "0.1.0"
authors = ["Behemehal", "Ahmetcan Aksu"]
edition = "2021"
description = "NodeJS like Event Listener library for rust!"
categories = ["accessibility"]
keywords = ["event_listener"]
license = "GPL-2.0"
readme = "README.md"
documentation = "https://docs.rs/rust_event_listener"
repository = "https://github.com/behemehal/rust_event_listener"

[dependencies]

[[bin]]
name = "example_messenger"
path = "examples/example_messenger.rs"